--- a/rwa.html
+++ b/rwa.html
@@ -62,9 +62,9 @@
 <body>
 
 <nav>
-    <a href="#">Pocetna</a>
-    <a href="#">Vjezbe DNS/TCP-IP (privremeni link)</a>
-    <a href="#">Vjezba HTTP (privremeni link)</a>
+    <a href="rwa.html">Pocetna</a>
+    <a href="https://github.com/dorarezic/rwa-zadace-dora/blob/a14ad9e7c87e474b930ca503e6c0be10afc7b979/RWA_DZ_01-IP_TCP_DNS-DoraRezic.doc">Vjezbe DNS/TCP-IP</a>
+    <a href="https://github.com/dorarezic/rwa-zadace-dora/blob/a14ad9e7c87e474b930ca503e6c0be10afc7b979/rwa-3.%20zd%20dora.docx">Vjezba HTTP</a>
 </nav>
 
 <header>
